<resources>
    <string name="app_name">VIC</string>
    <string name="desc_background_wave">Blauwe golven op de achtergrond</string>
    <string name="desc_hogent_logo">Logo HoGent</string>
    <string name="desc_VIC_logo">VIC Logo</string>
    <string name="txt_virtual_machines">Virtual Machines</string>
    <string name="txt_aanvragen">Aanvragen</string>
    <string name="txt_klanten">Klanten</string>
    <string name="desc_ic_profile">Profile icon</string>
    <string name="desc_ic_logout">Logout icon</string>
    <string name="txt_memory">Memory</string>
    <string name="txt_cpuCores">vCPU</string>
    <string name="txt_storage">Storage</string>
    <string name="txt_status">Status</string>
    <string name="txt_name">Name</string>
    <string name="txt_hostname">Hostname</string>
    <string name="txt_fqdn">FQDN</string>
    <string name="txt_template">Template</string>
    <string name="txt_availability">Beschikbaarheid</string>
    <string name="txt_software">Software</string>
    <string name="txt_highlyavailable">Hoge Beschikbaarheid</string>
    <string name="txt_backupfrequency">Backup Frequentie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_gebruiker">Gebruiker</string>
    <string name="txt_begindatum">Begindatum</string>
    <string name="txt_einddatum">Einddatum</string>
    <string name="phoneNumberLink"><a href="tel:+32 123 45 67 89">+32 123 45 67 89</a></string>
    <string name="txt_voorspelling">Resource Planner</string>
    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="homenavigatie">Home</string>
    <string name="vmsnavigatie">VM\'s</string>

    <!-- Auth0 -->
    <string name="auth_client_id">SmI8qxvt8wVrBNV5kquyPHgXsFO5HjsV</string>
    <string name="auth_domain">dev-k4byyl302m4qablp.us.auth0.com</string>

</resources>