<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/homenavigatie"/>
    <item
        android:id="@+id/VMListFragment"
        android:enabled="true"
        android:icon="@drawable/vmlijst"
        android:title="@string/vmsnavigatie"/>
    <item
        android:id="@+id/virtualMachineRequestListFragment"
        android:enabled="true"
        android:icon="@drawable/aanvragenlijst"
        android:title="@string/txt_aanvragen"/>
    <item
        android:id="@+id/clientListFragment"
        android:enabled="true"
        android:icon="@drawable/klantenlijst"
        android:title="@string/txt_klanten"/>
    <item
        android:id="@+id/voorspellingFragment"
        android:enabled="true"
        android:icon="@drawable/datum"
        android:title="@string/txt_voorspelling"/>

</menu>