<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".VirtualMachine.VirtualMachineFragment">

        <TextView
            android:id="@+id/txt_virtualMachine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Virtual Machine"
            android:textAlignment="center"
            android:textColor="@color/CTA"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_virtualMachine">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/lyt_storage"
                        style="@style/VMDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toStartOf="@+id/lyt_mode"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lyt_memory">

                        <TextView
                            android:id="@+id/txt_storage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_mode"
                            android:textColor="@color/green"
                            android:textStyle="bold"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:id="@+id/txt_storage_current"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lyt_mode"
                        style="@style/VMDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="@+id/lyt_storage"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/lyt_storage"
                        app:layout_constraintTop_toTopOf="@+id/lyt_storage">

                        <TextView
                            android:id="@+id/txt_mode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_memory"
                            android:textColor="@color/green"
                            android:textStyle="bold"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:id="@+id/txt_mode_current"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lyt_memory"
                        style="@style/VMDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="16dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toStartOf="@+id/lyt_cpuCores"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/txt_memory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_memory"
                            android:textColor="@color/green"
                            android:textStyle="bold"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:id="@+id/txt_memory_current"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lyt_cpuCores"
                        style="@style/VMDetail"
                        android:layout_width="0dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="@+id/lyt_memory"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/lyt_memory"
                        app:layout_constraintTop_toTopOf="@+id/lyt_memory">

                        <TextView
                            android:id="@+id/txt_cpuCores"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#00FFFFFF"
                            android:backgroundTint="#00FFFFFF"
                            android:text="@string/txt_cpuCores"
                            android:textColor="@color/green"
                            android:textStyle="bold"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:id="@+id/txt_cpuCores_current"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                    <LinearLayout
                        android:id="@+id/lyt_name"
                        style="@style/VMDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_name"
                            android:textColor="@color/CTA"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_name_current"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lyt_hostname"
                        style="@style/VMDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_hostname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_hostname"
                            android:textColor="@color/CTA"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_hostname_current"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lyt_fqdn"
                        style="@style/VMDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_fqdn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_fqdn"
                            android:textColor="@color/CTA"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_fqdn_current"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lyt_template"
                        style="@style/VMDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_template"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_template"
                            android:textColor="@color/CTA"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_template_current"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
